--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tienda</title>
-
-  <link rel="stylesheet" href="./styles.css">
-
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+
+  
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <header>
-    <h1>Fruti-Tienda</h1>
-    <h2>CarritoFrutero</h2>
-    <button id="CarritoFrutero"><i class="bi bi-basket"></i></button>
+    <h1><span>Fruti</span><span>Tienda</span></h1>
+    <button type="button" id="CarritoFrutero"><i class="bi bi-basket"></i></button>
   </header>
   <main>
     <section>
