Boton para comprar todo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h2>Su carrito</h2>
       <button type="button" id="cerrar-canasta"><i class="bi bi-x-circle"></i>Salir del carrito</button>
       <div id="carritoFrutas"></div>
-      <div id="total"><p>Total de su compra: <span id="precioTotal">0</span> $</p></div>
+      <div id="total"><p>Total de su compra: <span id="precioTotal">0</span> $</p></div><button id="comprar">Comprar :)</button>
     </div>
   </main>
   <script src="./js/frutas.js"></script>
