--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
   </main>
   <script src="./js/frutas.js"></script>
-  <script src="./js/Carrito.js"></script>
+  <script src="./js/carrito.js"></script>
   <script src="./js/modal.js"></script>
   <script src="./js/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
